Add Swagger anf Fluent Validators

--- a/dotNetLab2/appsettings.json
+++ b/dotNetLab2/appsettings.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=Movie_lab2.2;User Id=sa;Password=Dallas1;trusted_connection=True;"
   },
+    "Jwt": {
+    "Site": "https://localhost:5001",
+    "SigningKey": "lksdlfg ksdklf mlsdkf mskldfmlsdkf mlskdmflksdmf lskd",
+    "ExpiryInMinutes": "600"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -17,4 +22,4 @@
     }
   },
   "AllowedHosts": "*"
-}
+} 
